--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -15,8 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="checkout-overlay"></div>
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
@@ -135,7 +134,6 @@
                 </form>
             </div>
         </div>
-    </div>
     <div id="loading-overlay">
         <h1 class="text-light logo-font loading-spinner text-center">
             <span class="icon">
