--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -30,44 +30,36 @@
                 <br>
                 <br>
                 <hr class="page-breaker">
-                <div class="col-12 col-lg-6">
-                    <p class="form-title">{{ user }}'s Order History</p>
-                    <div class="order-history-table table-responsive">
+                <div class="order-list col-12">
+                    <p class="form-title">Your Order History</p>
+                    <table class="order-history-table table-responsive">
                         <div class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th>Order Number</th>
-                                    <th>Date</th>
-                                    <th>Items</th>
-                                    <th>Order Total</th>
+                                    <th style="color: #fafafa;">Order</th>
+                                    <th style="color: #fafafa;">Date</th>
+                                    <th style="color: #fafafa;">Total</th>
                                 </tr>
                             </thead>
                             <tbody>
                             {% for order in orders %}
                                 <tr>
                                     <td>
-                                        <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number|truncatechars:10 }}">
-                                            {{ order.order_number|truncatechars:10 }}
+                                        <a href="{% url 'previous_orders' order.order_number %}" title="{{ order.order_number|truncatechars:10 }}" style="color: #f0f005;">
+                                            {{ order.order_number|truncatechars:30 }}
                                         </a>
                                     </td>
-                                    <td>{{ order.date }}</td>
-                                    <td> 
-                                        <ul>
-                                            {% for item in order.lineitems.all %}
-                                                <li>
-                                                    {% if item.product.product_sizes %}
-                                                    Size {{ item.product.size|lower }}{% endif %}
-                                                    {{ item.product.name }} x {{ item.item_quantity }}
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
+                                    <td style="color: #fafafa;">
+                                        {{ order.date }}
                                     </td>
-                                    <td>£{{ order.grand_total }}</td>
+                                    <td style="color: #fafafa;">
+                                        £{{ order.grand_total }}
+                                    </td>
                                 </tr>
                             {% endfor %} 
                             </tbody>
                         </div>
-                    </div>
+                    </table>
                 </div>
             </div>
         </div>
