--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -36,9 +36,9 @@
                         <div class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th style="color: #fafafa;">Order</th>
-                                    <th style="color: #fafafa;">Date</th>
-                                    <th style="color: #fafafa;">Total</th>
+                                    <th style="color: #fafafa; font-weight: 100; padding-bottom: 10px;">Order</th>
+                                    <th style="color: #fafafa; font-weight: 100; padding-bottom: 10px;">Date</th>
+                                    <th style="color: #fafafa; font-weight: 100; padding-bottom: 10px; text-align: end;">Total</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -46,17 +46,18 @@
                                 <tr>
                                     <td>
                                         <a href="{% url 'previous_orders' order.order_number %}" title="{{ order.order_number|truncatechars:10 }}" style="color: #f0f005;">
-                                            {{ order.order_number|truncatechars:30 }}
+                                            {{ order.order_number|truncatechars:10 }}
                                         </a>
                                     </td>
                                     <td style="color: #fafafa;">
                                         {{ order.date }}
                                     </td>
-                                    <td style="color: #fafafa;">
+                                    <td style="color: #fafafa; text-align: end;">
                                         £{{ order.grand_total }}
                                     </td>
                                 </tr>
-                            {% endfor %} 
+                            {% endfor %}
+                       
                             </tbody>
                         </div>
                     </table>
