--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -19,7 +19,7 @@
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
-                <h2 class="page-title mt-5 text-center">Checkout</h2>
+                <h2 class="page-title text-center">Checkout</h2>
                 <hr>
             </div>
         </div>
@@ -74,7 +74,6 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-white">Fill out the details below and you're good to go</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <!------------------ Checkout form contact fields ------------------>
