--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -16,7 +16,7 @@
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
-                <h2 class="page-title mt-5 text-center">Shopping Bag</h2>
+                <h2 class="page-title text-center">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
