--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
-                            <input class="form-control search-bar text-white rounded-0" type="text" name="q" placeholder="Check Out Our Gear">
+                            <input class="form-control search-bar rounded-0" type="text" name="q" placeholder="Check Out Our Gear">
                             <div class="input-group-append">
                                 <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                     <span class="icon">
