--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -15,7 +15,7 @@
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
-                <h2 class="page-title mt-5 text-center"><p class="username">{{ user }}</p></h2>
+                <h2 class="page-title text-center"><p class="username">{{ user }}</p></h2>
                 <hr>
             </div>
         </div>
