Added input box for product review

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -114,6 +114,11 @@
                         {% endwith %}
                         </div>
                     </form>
+                    <div class="review-container">
+                    <hr class="page-breaker bottom">
+                    <p class="review-header">Review Product</p>
+                    <input type="text" id="review-input" name="review-input" required minlength="50" maxlength="500" size="10">
+                </div>
                 </div>
             </div>
         </div>
