--- a/static/css/base.css
+++ b/static/css/base.css
@@ -184,11 +184,11 @@ h1.company-name-font.text-white.my-0:hover {
     text-decoration: none;
 }
 div#topnav {
-    background-color: black !important;
+    background-color: #000305b8 !important;
 }
 
 nav.navbar.navbar-expand-lg.w-100 {
-    background-color: black;
+    background-color: #000305b8 ;
 }
 .navbar-dark .navbar-nav .nav-link {
     color: white;
