--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -50,7 +50,7 @@
                 <div><i class="fas fa-cart-arrow-down"></i></div>
                 <p class="my-0">
                     {% if grand_total %}
-                        ${{ grand_total|floatformat:2 }}
+                        £{{ grand_total|floatformat:2 }}
                     {% else %}
                         £0.00
                     {% endif %}
