--- a/static/css/base.css
+++ b/static/css/base.css
@@ -609,6 +609,9 @@ p.product_name.mb-0.text-capitalize {
     padding-bottom: 19px;
 }
 
+.form.form {
+    background-color: #fafafa;
+}
 
 /*---------- Individual Products Page - Product increment//decrement ----------*/
 
