--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -113,19 +113,11 @@
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
                         </div>
-                    <!------------------ Review form ------------------>
+                        <a href="{% url 'add_review' %}" class="continue-shopping-button">
+                            <span class="product-detail text-uppercase mt-5">Review</span>
+                        </a>
                 </form>
-                <div class="col-12 col-md-6">
-                    <form method="POST" action="{% url 'add_review' %}" class="form">
-                        {% csrf_token %}
-                        {{ form | crispy }}
-                        <div class="text-right">
-                            <a class="btn btn-outline-white rounded-0" href="{% url 'products' %}">Back</a>
-                            <button class="btn btn-black rounded-0" type="submit">Add Review</button>
-                        </div>
-                    </form>
                 </div>
-            </div>
             </div>
         </div>
     </div>
