--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -113,15 +113,10 @@
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
                         </div>
+                        <a href="">Review</a>
                     </form>
                 </div>
             </div>
-        </div>
-        <div class="col-12 col-lg-6">
-            <form action="" method="POST" class="border-white">
-                {% csrf_token %}
-                <input type="submit">
-            </form>
         </div>
     </div>
 
