--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -15,10 +15,10 @@
     <div class="row">
         <div class="col text-left mt-4">
             <hr>
-            <!------------------ Current category product page title ------------------>
+            <!-- ---------------- Current category product page title ----------------
             {% for c in current_categories %}
                 <h2 class="page-title text-center">{{ c.friendly_name }}</h2>
-            {% endfor %}
+            {% endfor %} -->
         </div>
     </div>
     <!------------------ Product filtering and sorting ------------------>
