--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,7 +24,7 @@
             <hr class="page-breaker">
         </div>
     </div>
-    <!------------------ Product image container ------------------>
+    <!-- Product image container -->
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
@@ -39,7 +39,7 @@
                     {% endif %}
                 </div>
             </div>
-            <!------------------ Product details, ratings and fields ------------------>
+            <!-- Product details, ratings and fields -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="details-container mb-5 mt-md-5">
                     <p class="product_name mb-0 text-capitalize">{{ product.name }}</p>
@@ -59,7 +59,7 @@
                 <form class="form" action="{% url 'add_item' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                        <!------------------ Size selector drop-down ------------------>
+                        <!-- Size selector drop-down -->>
                         {% with product.product_sizes as s %}
                         {% if s %}
                             <a class="size-guide-text" href="https://cdn.shopify.com/s/files/1/0040/5251/6910/files/Craft_size_guide_1024x1024.jpg?v=1595333114" 
@@ -72,38 +72,38 @@
                                 <option value="extra large">Extra Large</option>
                             </select>
                         {% endif %}
-                        <!------------------ Product quantity form ------------------>
+                        <!-- Product quantity form -->
                         <div class="col-12">
                             <div class="form-group quantity-box">
                                 <div class="input-group quantity">
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn btn-sm btn-black rounded-0" 
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                            <!------------------ Product decrease button ------------------>
+                                            <!-- Product decrease button -->
                                             <span>
                                                 <i class="fas fa-chevron-down text-white fa-sm"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <!------------------ Product quantity input ------------------>
+                                    <!-- Product quantity input -->
                                     <input class="form-control form-control-sm qty_input text-white" type="number" name="quantity" value="1" min="1" max="9" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
                                         <button class="increment-qty btn btn-sm btn-black rounded-0"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                            <!------------------ Product increase button ------------------>
+                                            <!-- Product increase button -->
                                             <span>
                                                 <i class="fas fa-chevron-up text-white fa-sm"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <!------------------ Only show size drop down if products have a size ------------------>
+                                    <!-- Only show size drop down if products have a size -->
                                     {% if item.product.product_sizes %}
                                         <input type="hidden" name="product_size" value="{{ item.size }}">
                                     {% endif %}
                                 </div>
                             </div>
                         </div>
-                        <!------------------ Continue shopping and checkout ------------------>
+                        <!-- Continue shopping and checkout -->>
                         <div class="col{% if s %}-12 mt-2{% endif %}">
                             <a href="{% url 'products' %}" class="continue-shopping-button">
                                 <span class="product-detail text-uppercase mt-5">Continue Shopping</span>
@@ -121,8 +121,8 @@
 
 
 {% endblock %}
-<!------------------ JS block for product quantity ------------------>
-{% block postloadjs %}
+<!-- JS block for product quantity -->
+>{% block postloadjs %}
     {{ block.super }}
     {% include 'products/includes/product_quantity_js.html' %}
 {% endblock %}
