--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -15,13 +15,13 @@
     <div class="row">
         <div class="col text-left mt-4">
             <hr>
-            <!-- ---------------- Current category product page title ----------------
+            <!-- Current category product page title--
             {% for c in current_categories %}
                 <h2 class="page-title text-center">{{ c.friendly_name }}</h2>
             {% endfor %} -->
         </div>
     </div>
-    <!------------------ Product filtering and sorting ------------------>
+    <!-- Product filtering and sorting -->>
     <div class="row">   
         <div class="dropdown-container col-10 offset-1">
             <div class="row mt-1 mb-2">
@@ -40,7 +40,7 @@
                         </select>
                     </div>
                 </div>
-                <!------------------ Current products counter and link back to all products ------------------>
+                <!-- Current products counter and link back to all products -->>
                 <div class="col-12 col-md-6 order-md-first">
                     <p class="mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
@@ -50,7 +50,7 @@
                         </p>
                     </div>
                 </div>
-            <!------------------ Product card and details ------------------>
+            <!-- Product card and details -->>
             <div class="row">
                 {% for product in products %}
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <!------------------ Page breaker hr positioning for screen sizes ------------------>
+                    <!-- Page breaker hr positioning for screen sizes -->
                     {% if forloop.counter|divisibleby:1 %}
                         <div class="col-12 d-sm-none">
                             <hr class="product page-breaker">
@@ -116,7 +116,7 @@
 </div>
 {% endblock %}
 
-<!------------------ Product filtering js script ------------------>
+<!-- Product filtering js script -->
 {% block postloadjs %}
 <script type="text/javascript">
     $('#sort-selector').change(function() {
