--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <!------------------ Stripe ------------------>
+        <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
@@ -69,7 +69,7 @@
                         <li class="list-inline-item dropdown">
                             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center text-white">
-                                    <div><i class="far fa-user"></i></i></div>
+                                    <div> <i class="far fa-user"></i> </div>
                                     <p class="my-0">My Account</p>
                                 </div>
                             </a>
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </header>
-        <!------------------ Toast messages ------------------>
+        <!-- Toast messages -->
         {% if messages %}
         <div class="site-message-container">
             {% for message in messages %}
@@ -145,7 +145,7 @@
 
         {% block content %}
         {% endblock %}
-        <!------------------ Toast message JS ------------------>
+        <!-- Toast message JS -->
         {% block postloadjs %}
             <script type="text/javascript">
                 $('.toast').toast('show');
