--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -24,7 +24,7 @@
     </li>
     <!-- to open the My account drop-down -->
     <li class="list-inline-item dropdown">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="text-black nav-link d-block d-lg-none" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center text-white">
                 <div><i class="far fa-user fa-lg"></i></div>
                 <p class="my-0">My Account</p>
